Structural changes
- Node and Frame classes removed
- nodeList is now ArrayList<Device> as the nodes are equivalent to devices, but will be distinguished in different list so they may be treated differently